fix for fdo#37391: don't write invalid references to files